[package]
name = "afpacket"
version = "0.1.5"
authors = ["The afpacket Authors <oss@nyantec.com>"]
description = "Bindings for Linux raw packet sockets (AF_PACKET), and an async wrapper"
repository = "https://github.com/nyantec/afpacket"
license = "MirOS"
readme = "README.md"
keywords = ["async", "raw", "socket"]
categories = ["network-programming","os"]
edition = "2018"

[dependencies]
libc = "0.2"
futures-lite = { version = "1.11", optional = true }
async-io = { version = "1.4", optional = true }

[features]
async = [ "futures-lite", "async-io" ]
default = [ "async" ]

[dev-dependencies]
nom = "6.1"
rand = "0.8.3"
veth-util-rs = {git = "https://github.com/seeyarh/veth-util-rs.git", branch = "main"}
serial_test = "0.5.1"
env_logger = "0.8.2"
etherparse = "0.9.0"
byteorder = "1.4.3"
log = "0.4"
